change the logo

--- a/firstpage.html
+++ b/firstpage.html
@@ -7,99 +7,23 @@
 @import url('https://fonts.googleapis.com/css2?family=Titillium+Web:wght@700&display=swap');
 body{
 font-family: 'Titillium Web', sans-serif;
-background-image: url('space3.png');
-background-color: #495867;
+background-image: url('bg1.png');
 background-size: cover;
-background-attachment: fixed;
+height: 100%;
+overflow: hidden;
 }
-h1{
-  color: #ffffff00;
-  text-align: center;
-  text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #0073e6, 0 0 20px #0073e6, 0 0 25px #0073e6, 0 0 30px #0073e6, 0 0 35px #0073e6;
-  position: absolute;
-  top: 40%;
-  left: 32%;
-  transform:translate(0%, -50%);
-}
+
 html, body {
     display: grid;
     height:95%;
 }
 
-a {
-    border: 4px solid #3F3F3F 0px 0px 5px #fff;
-    color: #fff;
-    text-align: center;
-    text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #0073e6, 0 0 20px #0073e6, 0 0 25px #0073e6, 0 0 30px #0073e6, 0 0 35px #0073e6;
-    display: inline-block;
-    font-size: 18px;
-    font-weight: bold;
-    line-height: 15px;
-    margin: auto;
-    padding: 12px 32px 12px 82px;
-    position: relative;
-	transform:translate(0%, 15%);
-    text-decoration: none;
-}
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 
-a .label,
-a .icon-arrow {
-    backface-visibility: hidden;
-    transform: translateZ(0);
-    perspective: 1000;
-}
 
-a .label {
-    display: inline-block;
-    transition: transform .5s cubic-bezier(0.86, 0, 0.07, 1);
-}
-
-a .icon-arrow {
-    fill: #3F3F3F;
-    height: 15px;
-    top: 17px;
-    transition: transform .5s cubic-bezier(0.86, 0, 0.07, 1), opacity .4s cubic-bezier(0.86, 0, 0.07, 1);
-    width: 35px;
-}
-
-a .icon-arrow.before {
-    left: 32px;
-    margin-right: 20px;
-    position: absolute;
-    transform-origin: left center;
-}
-
-a .icon-arrow.after {
-    margin-left: 20px;
-    opacity: 0;
-    position: absolute;
-    right: 32px;
-    transform: translateX(75%) scaleX(0.1);
-    transform-origin: left ;
-}
-
-a:hover .label {
-    transform: translateX(-60px);
-}
-
-a:hover .icon-arrow.before {
-    opacity: 0;
-    transform: translateX(-75%) scaleX(0.1);
-}
-
-a:hover .icon-arrow.after {
-    opacity: 1;
-    transform: translateX(0) scaleX(1);
-}
-
-a:active {
-    border-color: #FD6154;
-    color: #FD6154;
-}
-
-a:active .icon-arrow {
-    fill: #FD6154;
-}
 </style>
 
 </head>
@@ -107,27 +31,9 @@ a:active .icon-arrow {
 <body>
 
 <div>
-<h1 style="font-size:120px;">BLUE SKYE</h1>
-<img src="space4.png" alt="jupiter" width="160" height="160">
+<h1</h1>
+<img src="logo website.png" alt="logo" width=35%>
 </div>
-
-<a href="product2.php">
-    <svg class="icon-arrow before">
-        <use xlink:href="#arrow"></use>
-    </svg>
-    <span class="label">Next</span>
-    <svg class="icon-arrow after">
-        <use xlink:href="#arrow"></use>
-    </svg>
-</a>
-<svg style="display: none;">
-  <defs>
-    <symbol id="arrow" viewBox="0 0 35 15">
-      <title>Arrow</title>
-      <path d="M27.172 5L25 2.828 27.828 0 34.9 7.071l-7.07 7.071L25 11.314 27.314 9H0V5h27.172z "/>
-    </symbol>
-  </defs>
-</svg>
 
 </body>
 </html>
