--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <link rel="stylesheet" href="assets/css/styles.css">
 
         <title>Nowhere Else Market</title>
+        <link rel="shortcut icon" type="image/jpg" href="assets/img/logo.png"/>
     </head>
     <body>
 
