--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
                         </div>
                     </div>
 
-                    <img src="assets/img/movil-app.png" alt="" class="app__img">
+                    <img src="assets/img/phone.png" alt="" class="app__img">
                 </div>
             </section>
 
