--- a/index.html
+++ b/index.html
@@ -361,8 +361,8 @@
                 <div class="app__container bd-grid">
                     <div class="app__data">
                         <span class="section-subtitle app__initial">App</span>
-                        <h2 class="section-title app__initial">App is aviable</h2>
-                        <p class="app__description">Find our application and download it, you can make reservations, food orders, see your deliveries on the way and much more.</p>
+                        <h2 class="section-title app__initial">App is available</h2>
+                        <p class="app__description">Find our application and download it, sync your cart with the trolley, see your order history, pay the groceries and much more.</p>
                         <div class="app__stores">
                             <a href="#"><img src="assets/img/app1.png" alt="" class="app__store"></a>
                             <a href="#"><img src="assets/img/app2.png" alt="" class="app__store"></a>
@@ -379,7 +379,7 @@
                     <div class="contact__data">
                         <span class="section-subtitle contact__initial">Let's talk</span>
                         <h2 class="section-title contact__initial">Contact us</h2>
-                        <p class="contact__description">If you want to reserve a table in our restaurant, contact us and we will attend you quickly, with our 24/7 chat service.</p>
+                        <p class="contact__description">If you any inqueries, contact us and we will attend you quickly, with our 24/7 chat service.</p>
                     </div>
 
                     <div class="contact__button">
@@ -393,23 +393,13 @@
         <footer class="footer section bd-container">
             <div class="footer__container bd-grid">
                 <div class="footer__content">
-                    <a href="#" class="footer__logo">Tasty Food</a>
-                    <span class="footer__description">Restaurant</span>
+                    <a href="#" class="footer__logo">Nowhere Else Market</a>
+                    <span class="footer__description">Grocery Shop</span>
                     <div>
                         <a href="#" class="footer__social"><i class='bx bxl-facebook'></i></a>
                         <a href="#" class="footer__social"><i class='bx bxl-instagram'></i></a>
                         <a href="#" class="footer__social"><i class='bx bxl-twitter'></i></a>
                     </div>
-                </div>
-
-                <div class="footer__content">
-                    <h3 class="footer__title">Services</h3>
-                    <ul>
-                        <li><a href="#" class="footer__link">Delivery</a></li>
-                        <li><a href="#" class="footer__link">Pricing</a></li>
-                        <li><a href="#" class="footer__link">Fast food</a></li>
-                        <li><a href="#" class="footer__link">Reserve your spot</a></li>
-                    </ul>
                 </div>
 
                 <div class="footer__content">
@@ -423,12 +413,12 @@
                 </div>
 
                 <div class="footer__content">
-                    <h3 class="footer__title">Adress</h3>
+                    <h3 class="footer__title">Address</h3>
                     <ul>
-                        <li>Lima - Peru</li>
+                        <li>German-Malaysian Institute</li>
                         <li>Jr Union #999</li>
-                        <li>999 - 888 - 777</li>
-                        <li>tastyfood@email.com</li>
+                        <li>019 - 888 - 999</li>
+                        <li>nowhereelsemarket@email.com</li>
                     </ul>
                 </div>
             </div>
