--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <li class="nav__item"><a href="#about" class="nav__link">About</a></li>
                         <li class="nav__item"><a href="#services" class="nav__link">Services</a></li>
                         <li class="nav__item"><a href="#contact" class="nav__link">Contact us</a></li>
-                        <li class="nav__item"><a href="#login" class="nav__link">Login</a></li>
+                        <li class="nav__item"><a href="login.html" class="nav__link">Login</a></li>
 
                         <li><i class='bx bx-moon change-theme' id="theme-button"></i></li>
                     </ul>
