--- a/login.html
+++ b/login.html
@@ -5,14 +5,33 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <!-- ===== CSS ===== -->
-        <link rel="stylesheet" href="assets/css/loginstyles.css">
+        <link rel="stylesheet" href="assets/css/styles.css">
+        <link rel="stylesheet" href="loginassets/css/loginstyles.css">
     
         <!-- ===== BOX ICONS ===== -->
         <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
 
-        <title>Responsive Login Form Sign In Sign Up</title>
+        <title>Log In</title>
     </head>
     <body>
+        <!--========== HEADER ==========-->
+        <header class="l-header" id="header">
+            <nav class="nav bd-container">
+                <a href="index.html" class="nav__logo">Nowhere Else Market</a>
+
+                <div class="nav__menu" id="nav-menu">
+                    <ul class="nav__list">
+                        <li><i class='bx bx-moon change-theme' id="theme-button"></i></li>
+                    </ul>
+                </div>
+
+                <div class="nav__toggle" id="nav-toggle">
+                    <i class='bx bx-menu'></i>
+                </div>
+            </nav>
+        </header>
+        
+        <!--========== LOGIN ==========-->
         <div class="login">
             <div class="login__content">
                 <div class="login__img">
@@ -33,14 +52,7 @@
                             <input type="password" placeholder="Password" class="login__input">
                         </div>
 
-                        <a href="#" class="login__forgot">Forgot password?</a>
-
-                        <a href="#" class="login__button">Sign In</a>
-
-                        <div>
-                            <span class="login__account">Don't have an Account ?</span>
-                            <span class="login__signin" id="sign-up">Sign Up</span>
-                        </div>
+                        <a href="inventory.html" class="login__button">Sign In</a>
                     </form>
 
                     <form action="" class="login__create none" id="login-up">
@@ -61,24 +73,16 @@
                             <input type="password" placeholder="Password" class="login__input">
                         </div>
 
-                        <a href="#" class="login__button">Sign Up</a>
-
                         <div>
-                            <span class="login__account">Already have an Account ?</span>
                             <span class="login__signup" id="sign-in">Sign In</span>
                         </div>
 
-                        <div class="login__social">
-                            <a href="#" class="login__social-icon"><i class='bx bxl-facebook' ></i></a>
-                            <a href="#" class="login__social-icon"><i class='bx bxl-twitter' ></i></a>
-                            <a href="#" class="login__social-icon"><i class='bx bxl-google' ></i></a>
-                        </div>
                     </form>
                 </div>
             </div>
         </div>
 
         <!--===== MAIN JS =====-->
-        <script src="assets/js/main.js"></script>
+        <script src="loginassets/js/main.js"></script>
     </body>
 </html>
