--- a/index.html
+++ b/index.html
@@ -364,8 +364,8 @@
                         <h2 class="section-title app__initial">App is available</h2>
                         <p class="app__description">Find our application and download it, sync your cart with the trolley, see your order history, pay the groceries and much more.</p>
                         <div class="app__stores">
-                            <a href="#"><img src="assets/img/app1.png" alt="" class="app__store"></a>
-                            <a href="#"><img src="assets/img/app2.png" alt="" class="app__store"></a>
+                            <a href="https://www.apple.com/my/app-store/"><img src="assets/img/app1.png" alt="" class="app__store"></a>
+                            <a href="https://play.google.com/store"><img src="assets/img/app2.png" alt="" class="google_play"></a>
                         </div>
                     </div>
 
