--- a/login.html
+++ b/login.html
@@ -34,13 +34,15 @@
     <section id="login-window">
         <h1>Sign In</h1>
         <form id="login">
+
             <input type="text" placeholder="Enter Your Username" class="form-input" autocomplete="off" id="username">
             <p class="error" id="username-error"> * Username is required ! </p>
         
             <input type="password" placeholder="Enter Your Password" class="form-input" autocomplete="off" id="password">
             <p class="error" id="password-error"> * Password is required ! </p>
 
-            <button class="login-btn" type="button"> Login</button>
+            <button class="login" type="button"> Login</button>
+            <p class="error" id="login-error"> Your username or password is wrong ! </p>
         </form>
     </section>
     
