add button link

--- a/login.html
+++ b/login.html
@@ -50,8 +50,7 @@ $user_data = check_login($conn);
             <input type="password" placeholder="Enter Your Password" class="form-input" autocomplete="off" id="password">
             <p class="error" id="password-error"> * Password is required ! </p>
 
-            <button class="login" type="button"> Login</button>
-            <p class="error" id="login-error"> Your username or password is wrong ! </p>
+            <button class="login" type="button" onclick="window.location.href = 'inventory.html';" > Login</button>
         </form>
     </section>
     
