--- a/login.html
+++ b/login.html
@@ -16,6 +16,7 @@ $user_data = check_login($conn);
 
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="loginassets/css/loginstyle.css">
+    <link rel="stylesheet" href="loginassets/css/loginstyles.css">
 
     <title>Login</title>
 </head>
