update main page

--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
                     </div>
 
                     <div class="contact__button">
-                        <a href="#" class="button">Contact us now</a>
+                        <a href="faq.html" class="button">Contact us now</a>
                     </div>
                 </div>
             </section>
