--- a/index.html
+++ b/index.html
@@ -401,19 +401,19 @@
                     <a href="#" class="footer__logo">Nowhere Else Market</a>
                     <span class="footer__description">Grocery Shop</span>
                     <div>
-                        <a href="#" class="footer__social"><i class='bx bxl-facebook'></i></a>
-                        <a href="#" class="footer__social"><i class='bx bxl-instagram'></i></a>
-                        <a href="#" class="footer__social"><i class='bx bxl-twitter'></i></a>
+                        <a href="facebook.com" class="footer__social"><i class='bx bxl-facebook'></i></a>
+                        <a href="instagram.com" class="footer__social"><i class='bx bxl-instagram'></i></a>
+                        <a href="twitter.com" class="footer__social"><i class='bx bxl-twitter'></i></a>
                     </div>
                 </div>
 
                 <div class="footer__content">
                     <h3 class="footer__title">Information</h3>
                     <ul>
-                        <li><a href="#" class="footer__link">Event</a></li>
-                        <li><a href="#" class="footer__link">Contact us</a></li>
-                        <li><a href="#" class="footer__link">Privacy policy</a></li>
-                        <li><a href="#" class="footer__link">Terms of services</a></li>
+                        <li><a href="faq.html" class="footer__link">Event</a></li>
+                        <li><a href="faq.html" class="footer__link">Contact us</a></li>
+                        <li><a href="faq.html" class="footer__link">Privacy policy</a></li>
+                        <li><a href="faq.html" class="footer__link">Terms of services</a></li>
                     </ul>
                 </div>
 
