update link socials

--- a/index.html
+++ b/index.html
@@ -401,9 +401,9 @@
                     <a href="#" class="footer__logo">Nowhere Else Market</a>
                     <span class="footer__description">Grocery Shop</span>
                     <div>
-                        <a href="facebook.com" class="footer__social"><i class='bx bxl-facebook'></i></a>
-                        <a href="instagram.com" class="footer__social"><i class='bx bxl-instagram'></i></a>
-                        <a href="twitter.com" class="footer__social"><i class='bx bxl-twitter'></i></a>
+                        <a href="https://facebook.com" class="footer__social"><i class='bx bxl-facebook'></i></a>
+                        <a href="https://instagram.com" class="footer__social"><i class='bx bxl-instagram'></i></a>
+                        <a href="https://twitter.com" class="footer__social"><i class='bx bxl-twitter'></i></a>
                     </div>
                 </div>
 
