edit login page w/out database

--- a/login.html
+++ b/login.html
@@ -15,19 +15,45 @@ $user_data = check_login($conn);
 
     <!-- <title>Login Form | CodingLab</title> -->
     <link rel="stylesheet" href="assets/css/styles.css">
-        <link rel="stylesheet" href="loginassets/css/loginstyles.css">
+    <link rel="stylesheet" href="loginassets/css/loginstyles.css">
 
         <title>Login</title>
         <link rel="shortcut icon" type="image/jpg" href="assets/img/favicon.ico"/>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"/>
   </head>
-  
+
+
   <body>
+
+    <!--========== SCROLL TOP ==========-->
+    <a href="#" class="scrolltop" id="scroll-top">
+        <i class='bx bx-chevron-up scrolltop__icon'></i>
+    </a>
+
+    <!--========== HEADER ==========-->
+    <header class="l-header" id="header">
+        <nav class="nav bd-container">
+            <a href="index.html" class="nav__logo">Nowhere Else Market</a>
+
+            <div class="nav__menu" id="nav-menu">
+                <ul class="nav__list">
+                    <li><i class='bx bx-moon change-theme' id="theme-button"></i></li>
+                </ul>
+            </div>
+
+            <div class="nav__toggle" id="nav-toggle">
+                <i class='bx bx-menu'></i>
+            </div>
+        </nav>
+    </header>
+
+    <main class="l-main">
+
     <div class="container">
       <div class="wrapper">
         <div class="title"><span>Login Form</span></div>
-        <form action="#">
+        <form action="inventory.html">
           <div class="row">
             <i class="fas fa-user"></i>
             <input type="text" placeholder="Email or Phone" required>
@@ -36,18 +62,13 @@ $user_data = check_login($conn);
             <i class="fas fa-lock"></i>
             <input type="password" placeholder="Password" required>
           </div>
-          <div class="pass"><a href="#">Forgot password?</a></div>
           <div class="row button">
             <input type="submit" value="Login">
-          </div>
-          <div class="signup-link">Not a member? <a href="#">Signup now</a></div>
         </form>
       </div>
     </div>
 
-  </body>
-</html>
-    
+    <!--========== MAIN JS ==========-->
     <script src="assets/js/main.js"></script>
 </body>
 </html>
