--- a/login.html
+++ b/login.html
@@ -20,7 +20,7 @@ $user_data = check_login($conn);
 </head>
 <body>
     <section class="side">
-        <img src="./images/img.svg" alt="">
+        <img src="loginassets/img/img.svg" alt="">
     </section>
 
     <section class="main">
@@ -29,7 +29,7 @@ $user_data = check_login($conn);
             <div class="separator"></div>
             <p class="welcome-message">Please, provide login credential to proceed and have access to all our services</p>
 
-            <form class="login-form">
+            <form class="login-form" action="inventory.html">
                 <div class="form-control">
                     <input type="text" placeholder="Username">
                     <i class="fas fa-user"></i>
