--- a/login.html
+++ b/login.html
@@ -23,6 +23,17 @@ $user_data = check_login($conn);
         <img src="loginassets/img/img.svg" alt="">
     </section>
 
+<!--========== HEADER ==========-->
+<header class="l-header" id="header">
+    <nav class="nav bd-container">
+        <a href="index.html" class="nav__logo">Nowhere Else Market</a>
+
+        <div class="nav__menu" id="nav-menu">
+            <ul class="nav__list">
+                <li><i class='bx bx-moon change-theme' id="theme-button"></i></li>
+            </ul>
+        </div>
+
     <section class="main">
         <div class="login-container">
             <p class="title">Welcome back</p>
