--- a/login.html
+++ b/login.html
@@ -1,51 +1,66 @@
-<?php
-session_start();
-include("dbconnect.php");
-include("login.php");
-
-$user_data = check_login($conn);
-?>
-
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
-    <link rel="stylesheet" href="loginassets/css/loginstyles.css">
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <title>Login</title>
-        <link rel="shortcut icon" type="image/jpg" href="assets/img/favicon.ico"/>
-</head>
-<body>
-    <section class="side">
-        <img src="loginassets/img/img.svg" alt="">
-    </section>
+        <!-- ===== CSS ===== -->
+        <link rel="stylesheet" href="assets/css/styles.css">
 
-    <section class="main">
-        <div class="login-container">
-            <p class="title">Welcome back</p>
-            <div class="separator"></div>
-            <p class="welcome-message">Please, provide login credential to proceed and have access to all our services</p>
+        <!-- ===== BOX ICONS ===== -->
+        <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
 
-            <form class="login-form" action="inventory.html">
-                <div class="form-control">
-                    <input type="text" placeholder="Username">
-                    <i class="fas fa-user"></i>
-                </div>
-                <div class="form-control">
-                    <input type="password" placeholder="Password">
-                    <i class="fas fa-lock"></i>
-                </div>
+        <title>Login form responsive</title>  
+    </head>
+    <body>
+        <div class="l-form">
+            <div class="shape1"></div>
+            <div class="shape2"></div>
 
-                <button class="submit">Login</button>
-            </form>
+            <div class="form">
+                <img src="assets/img/authentication.svg" alt="" class="form__img">
+
+                <form action="" class="form__content">
+                    <h1 class="form__title">Welcome</h1>
+
+                    <div class="form__div form__div-one">
+                        <div class="form__icon">
+                            <i class='bx bx-user-circle'></i>
+                        </div>
+
+                        <div class="form__div-input">
+                            <label for="" class="form__label">Username</label>
+                            <input type="text" class="form__input">
+                        </div>
+                    </div>
+
+                    <div class="form__div">
+                        <div class="form__icon">
+                            <i class='bx bx-lock' ></i>
+                        </div>
+
+                        <div class="form__div-input">
+                            <label for="" class="form__label">Password</label>
+                            <input type="password" class="form__input">
+                        </div>
+                    </div>
+                    <a href="#" class="form__forgot">Forgot Password?</a>
+
+                    <input type="submit" class="form__button" value="Login">
+
+                    <div class="form__social">
+                        <span class="form__social-text">Our login with</span>
+
+                        <a href="#" class="form__social-icon"><i class='bx bxl-facebook' ></i></a>
+                        <a href="#" class="form__social-icon"><i class='bx bxl-google' ></i></a>
+                        <a href="#" class="form__social-icon"><i class='bx bxl-instagram' ></i></a>
+                    </div>
+                </form>
+            </div>
+
         </div>
-    </section>
-    
-    <!--========== MAIN JS ==========-->
-    <script src="assets/js/main.js"></script>
-
-</body>
+        
+        <!-- ===== MAIN JS ===== -->
+        <script src="assets/js/main.js"></script>
+    </body>
 </html>
