--- a/login.html
+++ b/login.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <!-- ===== CSS ===== -->
-        <link rel="stylesheet" href="assets/css/styles.css">
+        <link rel="stylesheet" href="loginassets/css/styles.css">
 
         <!-- ===== BOX ICONS ===== -->
         <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
@@ -18,7 +18,7 @@
             <div class="shape2"></div>
 
             <div class="form">
-                <img src="assets/img/authentication.svg" alt="" class="form__img">
+                <img src="loginassets/img/authentication.svg" alt="" class="form__img">
 
                 <form action="" class="form__content">
                     <h1 class="form__title">Welcome</h1>
