--- a/login.html
+++ b/login.html
@@ -20,7 +20,7 @@
             <div class="form">
                 <img src="loginassets/img/authentication.svg" alt="" class="form__img">
 
-                <form action="" class="form__content">
+                <form action="inventory.html" class="form__content">
                     <h1 class="form__title">Welcome</h1>
 
                     <div class="form__div form__div-one">
@@ -47,14 +47,6 @@
                     <a href="#" class="form__forgot">Forgot Password?</a>
 
                     <input type="submit" class="form__button" value="Login">
-
-                    <div class="form__social">
-                        <span class="form__social-text">Our login with</span>
-
-                        <a href="#" class="form__social-icon"><i class='bx bxl-facebook' ></i></a>
-                        <a href="#" class="form__social-icon"><i class='bx bxl-google' ></i></a>
-                        <a href="#" class="form__social-icon"><i class='bx bxl-instagram' ></i></a>
-                    </div>
                 </form>
             </div>
 
