--- a/login.html
+++ b/login.html
@@ -6,19 +6,20 @@
 
         <!-- ===== CSS ===== -->
         <link rel="stylesheet" href="assets/css/styles.css">
-        <link rel="stylesheet" href="loginassets/css/styles.css">
+        <link rel="stylesheet" href="loginassets/css/loginstyles.css">
 
         <!-- ===== BOX ICONS ===== -->
         <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
 
         <title>Login</title>  
+        <link rel="shortcut icon" type="image/jpg" href="assets/img/favicon.ico"/>
     </head>
     <body>
 
         <!--========== HEADER ==========-->
         <header class="l-header" id="header">
             <nav class="nav bd-container">
-                <a href="index.html" class="nav__logo">Nowhere Else Market</a>
+                <a href="#" class="nav__logo">Nowhere Else Market</a>
 
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list">
@@ -26,9 +27,13 @@
                     </ul>
                 </div>
 
+                <div class="nav__toggle" id="nav-toggle">
+                    <i class='bx bx-menu'></i>
+                </div>
+            </nav>
+        </header>
+
         <div class="l-form">
-            <div class="shape1"></div>
-            <div class="shape2"></div>
 
             <div class="form">
                 <img src="loginassets/img/authentication.svg" alt="" class="form__img">
