--- a/login.html
+++ b/login.html
@@ -19,7 +19,7 @@
         <!--========== HEADER ==========-->
         <header class="l-header" id="header">
             <nav class="nav bd-container">
-                <a href="#" class="nav__logo">Nowhere Else Market</a>
+                <a href="index.html" class="nav__logo">Nowhere Else Market</a>
 
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list">
