edit invetory page

--- a/inventory.html
+++ b/inventory.html
@@ -27,7 +27,7 @@
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list">
                         <li class="nav__item"><a href="stocks.html" class="nav__link active-link">Stocks</a></li>
-                        <li class="nav__item"><a href="custinfo.html" class="nav__link">Customer Information</a></li>
+                        <li class="nav__item"><a href="custinfo.html" class="nav__link">Customer Informations</a></li>
                         <li class="nav__item"><a href="login.html" class="nav__link">Logout</a></li>
                         <li><i class='bx bx-moon change-theme' id="theme-button"></i></li>
                     </ul>
