update inventory page

--- a/inventory.html
+++ b/inventory.html
@@ -6,7 +6,7 @@
 
         <!-- ===== CSS ===== -->
         <link rel="stylesheet" href="assets/css/styles.css">
-        <link rel="stylesheet" href="loginassets/css/loginstyle.css">
+        <link rel="stylesheet" href="loginassets/css/loginstyles.css">
 
         <title>Inventory</title>
         <link rel="shortcut icon" type="image/jpg" href="assets/img/favicon.ico"/>
@@ -37,13 +37,13 @@
                     <i class='bx bx-menu'></i>
                 </div>
             </nav>
+
+            <img src="assets/img/main.png" alt="" class="inventoryimg">
+
         </header>
 
         <main class="l-main">
         
-        <!--========== LOGIN ==========-->
-        
-
         <!--===== MAIN JS =====-->
         <script src="assets/js/main.js"></script>
         <script src="loginassets/js/main.js"></script>
