--- a/inventory.html
+++ b/inventory.html
@@ -9,7 +9,8 @@
 	<!-- My CSS -->
 	<link rel="stylesheet" href="inventoryassets/style.css">
 
-	<title>AdminHub</title>
+	<title>Inventory</title>
+	<link rel="shortcut icon" type="image/jpg" href="assets/img/favicon.ico"/>
 </head>
 <body>
 
@@ -18,7 +19,7 @@
 	<section id="sidebar">
 		<a href="#" class="brand">
 			<i class='bx bxs-smile'></i>
-			<span class="text">AdminHub</span>
+			<span class="text">Admin Hub</span>
 		</a>
 		<ul class="side-menu top">
 			<li class="active">
@@ -45,22 +46,11 @@
 					<span class="text">Message</span>
 				</a>
 			</li>
-			<li>
-				<a href="#">
-					<i class='bx bxs-group' ></i>
-					<span class="text">Team</span>
-				</a>
-			</li>
+
 		</ul>
 		<ul class="side-menu">
 			<li>
-				<a href="#">
-					<i class='bx bxs-cog' ></i>
-					<span class="text">Settings</span>
-				</a>
-			</li>
-			<li>
-				<a href="#" class="logout">
+				<a href="login.html" class="logout">
 					<i class='bx bxs-log-out-circle' ></i>
 					<span class="text">Logout</span>
 				</a>
@@ -90,7 +80,7 @@
 				<span class="num">8</span>
 			</a>
 			<a href="#" class="profile">
-				<img src="img/people.png">
+				<img src="inventoryassets/img/people.png">
 			</a>
 		</nav>
 		<!-- NAVBAR -->
@@ -134,7 +124,7 @@
 				<li>
 					<i class='bx bxs-dollar-circle' ></i>
 					<span class="text">
-						<h3>$2543</h3>
+						<h3>RM 2543</h3>
 						<p>Total Sales</p>
 					</span>
 				</li>
@@ -159,7 +149,7 @@
 						<tbody>
 							<tr>
 								<td>
-									<img src="img/people.png">
+									<img src="inventoryassets/img/people.png">
 									<p>John Doe</p>
 								</td>
 								<td>01-10-2021</td>
@@ -167,7 +157,7 @@
 							</tr>
 							<tr>
 								<td>
-									<img src="img/people.png">
+									<img src="inventoryassets/img/people.png">
 									<p>John Doe</p>
 								</td>
 								<td>01-10-2021</td>
@@ -175,7 +165,7 @@
 							</tr>
 							<tr>
 								<td>
-									<img src="img/people.png">
+									<img src="inventoryassets/img/people.png">
 									<p>John Doe</p>
 								</td>
 								<td>01-10-2021</td>
@@ -183,7 +173,7 @@
 							</tr>
 							<tr>
 								<td>
-									<img src="img/people.png">
+									<img src="inventoryassets/img/people.png">
 									<p>John Doe</p>
 								</td>
 								<td>01-10-2021</td>
