--- a/inventory.html
+++ b/inventory.html
@@ -29,9 +29,9 @@
 				</a>
 			</li>
 			<li>
-				<a href="#">
+				<a href="stocks.html">
 					<i class='bx bxs-shopping-bag-alt' ></i>
-					<span class="text">My Store</span>
+					<span class="text">Stocks</span>
 				</a>
 			</li>
 			<li>
