updated the login and inventory page

--- a/login.html
+++ b/login.html
@@ -51,7 +51,7 @@
 
                         <div class="form__div-input">
                             <label for="" class="form__label">Username</label>
-                            <input type="text" class="form__input" name="username" value="<?php echo $email; ?>" required>
+                            <input type="text" class="form__input" name="username" value="" required>
                         </div>
                     </div>
 
@@ -62,7 +62,7 @@
 
                         <div class="form__div-input">
                             <label for="" class="form__label">Password</label>
-                            <input type="password" class="form__input" name="password" value="<?php echo $email; ?>" required>
+                            <input type="password" class="form__input" name="password" value="" required>
                         </div>
                     </div>
                     <input type="submit" class="form__button" value="Login">
