--- a/inventory.html
+++ b/inventory.html
@@ -35,15 +35,9 @@
 				</a>
 			</li>
 			<li>
-				<a href="#">
+				<a href="custinfo.html">
 					<i class='bx bxs-doughnut-chart' ></i>
-					<span class="text">Analytics</span>
-				</a>
-			</li>
-			<li>
-				<a href="#">
-					<i class='bx bxs-message-dots' ></i>
-					<span class="text">Message</span>
+					<span class="text">Customer Information</span>
 				</a>
 			</li>
 
@@ -102,7 +96,7 @@
 				</div>
 				<a href="#" class="btn-download">
 					<i class='bx bxs-cloud-download' ></i>
-					<span class="text">Download PDF</span>
+					<span class="text" onclick="window.print()">Download PDF</span>
 				</a>
 			</div>
 
@@ -149,7 +143,6 @@
 						<tbody>
 							<tr>
 								<td>
-									<img src="inventoryassets/img/people.png">
 									<p>John Doe</p>
 								</td>
 								<td>01-10-2021</td>
@@ -157,31 +150,27 @@
 							</tr>
 							<tr>
 								<td>
-									<img src="inventoryassets/img/people.png">
-									<p>John Doe</p>
+									<p>Tom Riddle</p>
 								</td>
 								<td>01-10-2021</td>
 								<td><span class="status pending">Pending</span></td>
 							</tr>
 							<tr>
 								<td>
-									<img src="inventoryassets/img/people.png">
-									<p>John Doe</p>
+									<p>Annie Withe</p>
 								</td>
 								<td>01-10-2021</td>
 								<td><span class="status process">Process</span></td>
 							</tr>
 							<tr>
 								<td>
-									<img src="inventoryassets/img/people.png">
-									<p>John Doe</p>
+									<p>Henry Mane</p>
 								</td>
 								<td>01-10-2021</td>
 								<td><span class="status pending">Pending</span></td>
 							</tr>
 							<tr>
 								<td>
-									<img src="inventoryassets/img/people.png">
 									<p>John Doe</p>
 								</td>
 								<td>01-10-2021</td>
@@ -192,32 +181,10 @@
 				</div>
 				<div class="todo">
 					<div class="head">
-						<h3>Todos</h3>
+						<h3>Sales Insights</h3>
 						<i class='bx bx-plus' ></i>
 						<i class='bx bx-filter' ></i>
 					</div>
-					<ul class="todo-list">
-						<li class="completed">
-							<p>Todo List</p>
-							<i class='bx bx-dots-vertical-rounded' ></i>
-						</li>
-						<li class="completed">
-							<p>Todo List</p>
-							<i class='bx bx-dots-vertical-rounded' ></i>
-						</li>
-						<li class="not-completed">
-							<p>Todo List</p>
-							<i class='bx bx-dots-vertical-rounded' ></i>
-						</li>
-						<li class="completed">
-							<p>Todo List</p>
-							<i class='bx bx-dots-vertical-rounded' ></i>
-						</li>
-						<li class="not-completed">
-							<p>Todo List</p>
-							<i class='bx bx-dots-vertical-rounded' ></i>
-						</li>
-					</ul>
 				</div>
 			</div>
 		</main>
