--- a/login.html
+++ b/login.html
@@ -24,12 +24,6 @@
             <nav class="nav bd-container">
                 <a href="index.html" class="nav__logo">Nowhere Else Market</a>
 
-                <div class="nav__menu" id="nav-menu">
-                    <ul class="nav__list">
-                        <li><i class='bx bx-moon change-theme' id="theme-button"></i></li>
-                    </ul>
-                </div>
-
                 <div class="nav__toggle" id="nav-toggle">
                     <i class='bx bx-menu'></i>
                 </div>
@@ -41,7 +35,7 @@
             <div class="form">
                 <img src="loginassets/img/authentication.svg" alt="" class="form__img">
 
-                <form action="inventory.html" class="form__content">
+                <form action="adminhub.html" class="form__content">
                     <h1 class="form__title">Welcome</h1>
 
                     <div class="form__div form__div-one">
