--- a/adminhub.html
+++ b/adminhub.html
@@ -718,7 +718,7 @@
 														</div>
 													</td>
 													<td><a href="javascript: void(0);" class="text-body fw-bold">#MB2543</a> </td>
-													<td>Barry Dick</td>
+													<td>Barry Duck</td>
 													<td> 05 Oct, 2019 </td>
 													<td> $412 </td>
 													<td> <span class="badge rounded-pill bg-soft-success font-size-12">Paid</span> </td>
@@ -773,57 +773,10 @@
 				</div>
 				<!-- container-fluid -->
 			</div>
-			<!-- End Page-content -->
-			<footer class="footer">
-				<div class="container-fluid">
-					<div class="row">
-						<div class="col-sm-6">
-							<script>
-							document.write(new Date().getFullYear())
-							</script> © Soeng Souy. </div>
-						<div class="col-sm-6">
-							<div class="text-sm-end d-none d-sm-block"> Crafted with <i class="mdi mdi-heart text-danger"></i> by <a href="https://soengsouy.com/" target="_blank" class="text-reset">Soeng Souy</a> </div>
-						</div>
-					</div>
-				</div>
-			</footer>
 		</div>
 		<!-- end main content-->
 	</div>
 	<!-- END layout-wrapper -->
-	<!-- Right Sidebar -->
-	<div class="right-bar">
-		<div data-simplebar class="h-100">
-			<div class="rightbar-title d-flex align-items-center px-3 py-4">
-				<h5 class="m-0 me-2">Settings</h5>
-				<a href="javascript:void(0);" class="right-bar-toggle ms-auto"> <i class="mdi mdi-close noti-icon"></i> </a>
-			</div>
-			<!-- Settings -->
-			<hr class="mt-0" />
-			<h6 class="text-center mb-0">Choose Layouts</h6>
-			<div class="p-4">
-				<div class="mb-2"> <img src="assets/images/layouts/layout-1.jpg" class="img-thumbnail" alt="layout images"> </div>
-				<div class="form-check form-switch mb-3">
-					<input type="checkbox" class="form-check-input theme-choice" id="light-mode-switch" checked />
-					<label class="form-check-label" for="light-mode-switch">Light Mode</label>
-				</div>
-				<div class="mb-2"> <img src="assets/images/layouts/layout-2.jpg" class="img-thumbnail" alt="layout images"> </div>
-				<div class="form-check form-switch mb-3">
-					<input type="checkbox" class="form-check-input theme-choice" id="dark-mode-switch" />
-					<label class="form-check-label" for="dark-mode-switch">Dark Mode</label>
-				</div>
-				<div class="mb-2"> <img src="assets/images/layouts/layout-3.jpg" class="img-thumbnail" alt="layout images"> </div>
-				<div class="form-check form-switch mb-3">
-					<input type="checkbox" class="form-check-input theme-choice" id="rtl-mode-switch" />
-					<label class="form-check-label" for="rtl-mode-switch">RTL Mode</label>
-				</div>
-				<div class="mb-2"> <img src="assets/images/layouts/layout-4.jpg" class="img-thumbnail" alt="layout images"> </div>
-				<div class="form-check form-switch mb-5">
-					<input class="form-check-input theme-choice" type="checkbox" id="dark-rtl-mode-switch">
-					<label class="form-check-label" for="dark-rtl-mode-switch">Dark RTL Mode</label>
-				</div>
-			</div>
-		</div>
 		<!-- end slimscroll-menu-->
 	</div>
 	<!-- /Right-bar -->
