--- a/ecommerce-customers.html
+++ b/ecommerce-customers.html
@@ -3,12 +3,12 @@
 
 <head>
 	<meta charset="utf-8" />
-	<title>soengsouy</title>
+	<title>Inventory</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta content="Premium Multipurpose Admin & Dashboard Template" name="description" />
 	<meta content="Themesbrand" name="author" />
 	<!-- App favicon -->
-	<link rel="shortcut icon" href="assets/images/favicon.ico">
+	<link rel="shortcut icon" type="image/jpg" href="assets/img/favicon.ico"/>
 	<!-- DataTables -->
 	<link href="assets/libs/datatables.net-bs4/css/dataTables.bootstrap4.min.css" rel="stylesheet" type="text/css" />
 	<!-- Responsive datatable examples -->
@@ -18,7 +18,8 @@
 	<!-- Icons Css -->
 	<link href="assets/css/icons.min.css" rel="stylesheet" type="text/css" />
 	<!-- App Css-->
-	<link href="assets/css/app.min.css" id="app-style" rel="stylesheet" type="text/css" /> </head>
+	<link href="assets/css/app.min.css" id="app-style" rel="stylesheet" type="text/css" /> 
+</head>
 
 <body>
 	<!-- <body data-layout="horizontal" data-topbar="colored"> -->
@@ -29,16 +30,15 @@
 				<div class="d-flex">
 					<!-- LOGO -->
 					<div class="navbar-brand-box">
-						<a href="index.html" class="logo logo-dark"> <span class="logo-sm">
-                                    <img src="assets/images/logo-sm.png" alt="" height="22">
-                                </span> <span class="logo-lg">
-                                    <img src="assets/images/logo-dark.png" alt="" height="20">
-                                </span> </a>
-						<a href="index.html" class="logo logo-light"> <span class="logo-sm">
-                                    <img src="assets/images/logo-sm.png" alt="" height="22">
-                                </span> <span class="logo-lg">
-                                    <img src="assets/images/logo-light.png" alt="" height="20">
-                                </span> </a>
+						<a href="adminhub.html" class="logo logo-dark">
+                        <span class="logo-sm">
+                            <img src="assets/img/logo.png" alt="" height="22">
+                        </span>
+						<a href="adminhub.html" class="logo logo-light"> <span class="logo-sm">
+                        <img src="assets/img/logo.png" alt="" height="22">
+                        </span> <span class="logo-lg">
+                            <img src="assets/img/logo.png" alt="" height="20">
+                        </span> </a>
 					</div>
 					<button type="button" class="btn btn-sm px-3 font-size-16 header-item waves-effect vertical-menu-btn"> <i class="fa fa-fw fa-bars"></i> </button>
 					<!-- App Search-->
