--- a/invoices-list.html
+++ b/invoices-list.html
@@ -4,12 +4,12 @@
     <head>
         
         <meta charset="utf-8" />
-        <title>Invoice List | Minible - Admin & Dashboard Template</title>
+        <title>Inventory</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta content="Premium Multipurpose Admin & Dashboard Template" name="description" />
         <meta content="Themesbrand" name="author" />
         <!-- App favicon -->
-        <link rel="shortcut icon" href="assets/images/favicon.ico">
+        <link rel="shortcut icon" type="image/jpg" href="assets/img/favicon.ico"/>
 
         <!-- bootstrap-datepicker css -->
         <link href="assets/libs/bootstrap-datepicker/css/bootstrap-datepicker.min.css" rel="stylesheet">
