edited some part

--- a/adminhub.html
+++ b/adminhub.html
@@ -103,7 +103,7 @@
 		<div class="vertical-menu">
 			<!-- LOGO -->
 			<div class="navbar-brand-box">
-				<a href="index.html" class="logo logo-dark"> <span class="logo-sm">
+				<a href="adminhub.html" class="logo logo-dark"> <span class="logo-sm">
                             <img src="assets/images/logo-sm.png" alt="" height="22">
                         </span> <span class="logo-lg">
                             <img src="assets/images/logo-dark.png" alt="" height="20">
@@ -130,7 +130,6 @@
 							<ul class="sub-menu" aria-expanded="false">
 								<li><a href="tables-editable.html">Stocks</a></li>
 								<li><a href="ecommerce-orders.html">Orders</a></li>
-								<li><a href="ecommerce-customers.html">Customers</a></li>
 							</ul>
 						</li>
 						<li>
@@ -386,9 +385,9 @@
 														</div>
 													</td>
 													<td><a href="javascript: void(0);" class="text-body fw-bold">#MB2540</a> </td>
-													<td>Neal Matthews</td>
+													<td>Naufal Syukrey</td>
 													<td> 07 Oct, 2019 </td>
-													<td> $400 </td>
+													<td> RM400 </td>
 													<td> <span class="badge rounded-pill bg-soft-success font-size-12">Paid</span> </td>
 													<td> <i class="fab fa-cc-mastercard me-1"></i> Mastercard </td>
 													<td>
@@ -403,9 +402,9 @@
 														</div>
 													</td>
 													<td><a href="javascript: void(0);" class="text-body fw-bold">#MB2541</a> </td>
-													<td>Jamal Burnett</td>
+													<td>Malinda Hassan</td>
 													<td> 07 Oct, 2019 </td>
-													<td> $380 </td>
+													<td> RM380 </td>
 													<td> <span class="badge rounded-pill bg-soft-danger font-size-12">Chargeback</span> </td>
 													<td> <i class="fab fa-cc-visa me-1"></i> Visa </td>
 													<td>
@@ -420,9 +419,9 @@
 														</div>
 													</td>
 													<td><a href="javascript: void(0);" class="text-body fw-bold">#MB2542</a> </td>
-													<td>Juan Mitchell</td>
+													<td>Farah Fuaad</td>
 													<td> 06 Oct, 2019 </td>
-													<td> $384 </td>
+													<td> RM384 </td>
 													<td> <span class="badge rounded-pill bg-soft-success font-size-12">Paid</span> </td>
 													<td> <i class="fab fa-cc-paypal me-1"></i> Paypal </td>
 													<td>
@@ -437,9 +436,9 @@
 														</div>
 													</td>
 													<td><a href="javascript: void(0);" class="text-body fw-bold">#MB2543</a> </td>
-													<td>Barry Duck</td>
+													<td>Daniel Haiqal</td>
 													<td> 05 Oct, 2019 </td>
-													<td> $412 </td>
+													<td> RM412 </td>
 													<td> <span class="badge rounded-pill bg-soft-success font-size-12">Paid</span> </td>
 													<td> <i class="fab fa-cc-mastercard me-1"></i> Mastercard </td>
 													<td>
@@ -454,9 +453,9 @@
 														</div>
 													</td>
 													<td><a href="javascript: void(0);" class="text-body fw-bold">#MB2544</a> </td>
-													<td>Ronald Taylor</td>
+													<td>Mick Austin</td>
 													<td> 04 Oct, 2019 </td>
-													<td> $404 </td>
+													<td> RM404 </td>
 													<td> <span class="badge rounded-pill bg-soft-warning font-size-12">Refund</span> </td>
 													<td> <i class="fab fa-cc-visa me-1"></i> Visa </td>
 													<td>
@@ -471,9 +470,9 @@
 														</div>
 													</td>
 													<td><a href="javascript: void(0);" class="text-body fw-bold">#MB2545</a> </td>
-													<td>Jacob Hunter</td>
+													<td>Lee Xuau</td>
 													<td> 04 Oct, 2019 </td>
-													<td> $392 </td>
+													<td> RM392 </td>
 													<td> <span class="badge rounded-pill bg-soft-success font-size-12">Paid</span> </td>
 													<td> <i class="fab fa-cc-paypal me-1"></i> Paypal </td>
 													<td>
