--- a/ecommerce-orders.html
+++ b/ecommerce-orders.html
@@ -224,7 +224,6 @@
 							<ul class="sub-menu" aria-expanded="false">
 								<li><a href="tables-editable.html">Stocks</a></li>
 								<li><a href="ecommerce-orders.html">Orders</a></li>
-								<li><a href="ecommerce-customers.html">Customers</a></li>
 							</ul>
 						</li>
 						<li>
@@ -313,8 +312,8 @@
 											</td>
 											<td><a href="javascript: void(0);" class="text-dark fw-bold">#MN0132</a> </td>
 											<td> 10 Jul, 2020 </td>
-											<td>Melvin Martin</td>
-											<td> $142 </td>
+											<td>Ali Ad</td>
+											<td> RM142 </td>
 											<td>
 												<div class="badge bg-pill bg-soft-success font-size-12">Paid</div>
 											</td>
@@ -329,8 +328,8 @@
 											</td>
 											<td><a href="javascript: void(0);" class="text-dark fw-bold">#MN0131</a> </td>
 											<td> 09 Jul, 2020 </td>
-											<td>Roy Michael</td>
-											<td> $130 </td>
+											<td>Min Hao</td>
+											<td> RM130 </td>
 											<td>
 												<div class="badge bg-pill bg-soft-success font-size-12">Paid</div>
 											</td>
@@ -345,8 +344,8 @@
 											</td>
 											<td><a href="javascript: void(0);" class="text-dark fw-bold">#MN0130</a> </td>
 											<td> 08 Jul, 2020 </td>
-											<td>Shelby Wolf</td>
-											<td> $123 </td>
+											<td>Toto Wolf</td>
+											<td> RM123 </td>
 											<td>
 												<div class="badge bg-pill bg-soft-warning font-size-12">unpaid</div>
 											</td>
@@ -361,8 +360,8 @@
 											</td>
 											<td><a href="javascript: void(0);" class="text-dark fw-bold">#MN0129</a></td>
 											<td> 07 Jul, 2020 </td>
-											<td>James Riddick</td>
-											<td> $173 </td>
+											<td>Maria Zulkifli</td>
+											<td> RM173 </td>
 											<td>
 												<div class="badge bg-pill bg-soft-success font-size-12">Paid</div>
 											</td>
@@ -377,8 +376,8 @@
 											</td>
 											<td><a href="javascript: void(0);" class="text-dark fw-bold">#MN0128</a></td>
 											<td> 07 Jul, 2020 </td>
-											<td>George Kwan</td>
-											<td> $160 </td>
+											<td>Leu Kwan</td>
+											<td> RM160 </td>
 											<td>
 												<div class="badge bg-pill bg-soft-danger font-size-12">Chargeback</div>
 											</td>
@@ -393,8 +392,8 @@
 											</td>
 											<td><a href="javascript: void(0);" class="text-dark fw-bold">#MN0127</a> </td>
 											<td> 06 Jul, 2020 </td>
-											<td>Kevin Patterson</td>
-											<td> $165 </td>
+											<td>Aminnisa</td>
+											<td> RM165 </td>
 											<td>
 												<div class="badge bg-pill bg-soft-success font-size-12">Paid</div>
 											</td>
@@ -409,8 +408,8 @@
 											</td>
 											<td><a href="javascript: void(0);" class="text-dark fw-bold">#MN0126</a> </td>
 											<td> 05 Jul, 2020 </td>
-											<td>Danny Orr</td>
-											<td> $161 </td>
+											<td>Daniel Haiqal</td>
+											<td> RM161 </td>
 											<td>
 												<div class="badge bg-pill bg-soft-success font-size-12">Paid</div>
 											</td>
@@ -425,8 +424,8 @@
 											</td>
 											<td><a href="javascript: void(0);" class="text-dark fw-bold">#MN0125</a> </td>
 											<td> 04 Jul, 2020 </td>
-											<td>Sylvia Garcia</td>
-											<td> $153 </td>
+											<td>Farah Fuaad</td>
+											<td> RM153 </td>
 											<td>
 												<div class="badge bg-pill bg-soft-warning font-size-12">unpaid</div>
 											</td>
@@ -441,8 +440,8 @@
 											</td>
 											<td><a href="javascript: void(0);" class="text-dark fw-bold">#MN0124</a></td>
 											<td> 04 Jul, 2020 </td>
-											<td>Charles Denney</td>
-											<td> $152 </td>
+											<td>Naufal syukrey</td>
+											<td> RM152 </td>
 											<td>
 												<div class="badge bg-pill bg-soft-success font-size-12">Paid</div>
 											</td>
@@ -457,8 +456,8 @@
 											</td>
 											<td><a href="javascript: void(0);" class="text-dark fw-bold">#MN0123</a> </td>
 											<td> 03 Jul, 2020 </td>
-											<td>Lisa Farrell</td>
-											<td> $167 </td>
+											<td>Lisa Farid</td>
+											<td> RM167 </td>
 											<td>
 												<div class="badge bg-pill bg-soft-success font-size-12">Paid</div>
 											</td>
@@ -474,7 +473,7 @@
 											<td><a href="javascript: void(0);" class="text-dark fw-bold">#MN0122</a> </td>
 											<td> 02 Jul, 2020 </td>
 											<td>Connie Franco</td>
-											<td> $163 </td>
+											<td> RM163 </td>
 											<td>
 												<div class="badge bg-pill bg-soft-success font-size-12">Paid</div>
 											</td>
@@ -489,8 +488,8 @@
 											</td>
 											<td><a href="javascript: void(0);" class="text-dark fw-bold">#MN0121</a> </td>
 											<td> 02 Jul, 2020 </td>
-											<td>Lara Casillas</td>
-											<td> $171 </td>
+											<td>Lara Marina</td>
+											<td> RM171 </td>
 											<td>
 												<div class="badge bg-pill bg-soft-success font-size-12">Paid</div>
 											</td>
