--- a/invoices-detail.html
+++ b/invoices-detail.html
@@ -342,7 +342,6 @@
                                 <ul class="sub-menu" aria-expanded="false">
                                     <li><a href="tables-editable.html">Stocks</a></li>
                                     <li><a href="ecommerce-orders.html">Orders</a></li>
-                                    <li><a href="ecommerce-customers.html">Customers</a></li>
                                 </ul>
                             </li>
                             <li>
@@ -403,10 +402,10 @@
                                         <div class="invoice-title">
                                             <h4 class="float-end font-size-16">Invoice #MN0131 <span class="badge bg-success font-size-12 ms-2">Paid</span></h4>
                                             <div class="mb-4">
-                                                <img src="assets/images/logo-dark.png" alt="logo" height="20"/>
+                                                <img src="assets/img/logo.png" alt="logo" height="20"/>
                                             </div>
                                             <div class="text-muted">
-                                                <p class="mb-1">641 Counts Lane Wilmore, KY 40390</p>
+                                                <p class="mb-1">German-Malaysian Institute, Jr Union, #999</p>
                                                 <p class="mb-1"><i class="uil uil-envelope-alt me-1"></i> abc@123.com</p>
                                                 <p><i class="uil uil-phone me-1"></i> 012-345-6789</p>
                                             </div>
@@ -418,9 +417,9 @@
                                             <div class="col-sm-6">
                                                 <div class="text-muted">
                                                     <h5 class="font-size-16 mb-3">Billed To:</h5>
-                                                    <h5 class="font-size-15 mb-2">Preston Miller</h5>
-                                                    <p class="mb-1">4450 Fancher Drive Dallas, TX 75247</p>
-                                                    <p class="mb-1">PrestonMiller@armyspy.com</p>
+                                                    <h5 class="font-size-15 mb-2">Haiqal Daniel</h5>
+                                                    <p class="mb-1">45, Jalan Mango, Taman Buahan, JR, Malaysia</p>
+                                                    <p class="mb-1">haiqal.d@gmail.com</p>
                                                     <p>001-234-5678</p>
                                                 </div>
                                             </div>
