--- a/adminhub.html
+++ b/adminhub.html
@@ -58,44 +58,6 @@
 								</div>
 							</form>
 						</div>
-					</div>
-					<div class="dropdown d-none d-lg-inline-block ms-1">
-						<button type="button" class="btn header-item noti-icon waves-effect" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="uil-apps"></i> </button>
-						<div class="dropdown-menu dropdown-menu-lg dropdown-menu-end">
-							<div class="px-lg-2">
-								<div class="row g-0">
-									<div class="col">
-										<a class="dropdown-icon-item" href="#"> <img src="assets/images/brands/github.png" alt="Github"> <span>GitHub</span> </a>
-									</div>
-									<div class="col">
-										<a class="dropdown-icon-item" href="#"> <img src="assets/images/brands/bitbucket.png" alt="bitbucket"> <span>Bitbucket</span> </a>
-									</div>
-									<div class="col">
-										<a class="dropdown-icon-item" href="#"> <img src="assets/images/brands/dribbble.png" alt="dribbble"> <span>Dribbble</span> </a>
-									</div>
-								</div>
-								<div class="row g-0">
-									<div class="col">
-										<a class="dropdown-icon-item" href="#"> <img src="assets/images/brands/dropbox.png" alt="dropbox"> <span>Dropbox</span> </a>
-									</div>
-									<div class="col">
-										<a class="dropdown-icon-item" href="#"> <img src="assets/images/brands/mail_chimp.png" alt="mail_chimp"> <span>Mail Chimp</span> </a>
-									</div>
-									<div class="col">
-										<a class="dropdown-icon-item" href="#"> <img src="assets/images/brands/slack.png" alt="slack"> <span>Slack</span> </a>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="dropdown d-inline-block">
-						<button type="button" class="btn header-item waves-effect" id="page-header-user-dropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <img class="rounded-circle header-profile-user" src="assets/images/users/avatar-4.jpg" alt="Header Avatar"> <span class="d-none d-xl-inline-block ms-1 fw-medium font-size-15">Soeng Souy</span> <i class="uil-angle-down d-none d-xl-inline-block font-size-15"></i> </button>
-						<div class="dropdown-menu dropdown-menu-end">
-							<!-- item--><a class="dropdown-item" href="#"><i class="uil uil-user-circle font-size-18 align-middle text-muted me-1"></i> <span class="align-middle">View Profile</span></a> <a class="dropdown-item" href="#"><i class="uil uil-wallet font-size-18 align-middle me-1 text-muted"></i> <span class="align-middle">My Wallet</span></a> <a class="dropdown-item d-block" href="#"><i class="uil uil-cog font-size-18 align-middle me-1 text-muted"></i> <span class="align-middle">Settings</span> <span class="badge bg-soft-success rounded-pill mt-1 ms-2">03</span></a> <a class="dropdown-item" href="#"><i class="uil uil-lock-alt font-size-18 align-middle me-1 text-muted"></i> <span class="align-middle">Lock screen</span></a> <a class="dropdown-item" href="#"><i class="uil uil-sign-out-alt font-size-18 align-middle me-1 text-muted"></i> <span class="align-middle">Sign out</span></a> </div>
-					</div>
-					<div class="dropdown d-inline-block">
-						<button type="button" class="btn header-item noti-icon right-bar-toggle waves-effect"> <i class="uil-cog"></i> </button>
-					</div>
 				</div>
 			</div>
 		</header>
@@ -104,18 +66,15 @@
 			<!-- LOGO -->
 			<div class="navbar-brand-box">
 				<a href="adminhub.html" class="logo logo-dark"> <span class="logo-sm">
-                            <img src="assets/images/logo-sm.png" alt="" height="22">
+                            <img src="assets/img/nwlogo.png" alt="" height="82">
                         </span> <span class="logo-lg">
-                            <img src="assets/images/logo-dark.png" alt="" height="20">
+							<img src="assets/img/nwlogo.png" alt="" height="80">
                         </span> </a>
 				<a href="index.html" class="logo logo-light"> <span class="logo-sm">
-                            <img src="assets/images/logo-sm.png" alt="" height="22">
+                            <img src="assets/img/nwlogo.png" alt="" height="82">
                         </span> <span class="logo-lg">
-                            <img src="assets/images/logo-light.png" alt="" height="20">
+                            <img src="assets/img/nwlogo.png" alt="" height="80">
                         </span> </a>
-			</div>
-			<button type="button" class="btn btn-sm px-3 font-size-16 header-item waves-effect vertical-menu-btn"> <i class="fa fa-fw fa-bars"></i> </button>
-			<div data-simplebar class="sidebar-menu-scroll">
 				<!--- Sidemenu -->
 				<div id="sidebar-menu">
 					<!-- Left Menu Start -->
@@ -128,7 +87,7 @@
 						<li>
 							<a href="javascript: void(0);" class="has-arrow waves-effect"> <i class="uil-store"></i> <span>All inventory</span> </a>
 							<ul class="sub-menu" aria-expanded="false">
-								<li><a href="tables-editable.html">Stocks</a></li>
+								<li><a href="stocks.html">Stocks</a></li>
 								<li><a href="ecommerce-orders.html">Orders</a></li>
 							</ul>
 						</li>
