--- a/ecommerce-orders.html
+++ b/ecommerce-orders.html
@@ -202,11 +202,6 @@
                         </span> <span class="logo-lg">
                             <img src="assets/images/logo-dark.png" alt="" height="20">
                         </span> </a>
-				<a href="index.html" class="logo logo-light"> <span class="logo-sm">
-                            <img src="assets/images/logo-sm.png" alt="" height="22">
-                        </span> <span class="logo-lg">
-                            <img src="assets/images/logo-light.png" alt="" height="20">
-                        </span> </a>
 			</div>
 			<button type="button" class="btn btn-sm px-3 font-size-16 header-item waves-effect vertical-menu-btn"> <i class="fa fa-fw fa-bars"></i> </button>
 			<div data-simplebar class="sidebar-menu-scroll">
@@ -222,7 +217,7 @@
 						<li>
 							<a href="javascript: void(0);" class="has-arrow waves-effect"> <i class="uil-store"></i> <span>All inventory</span> </a>
 							<ul class="sub-menu" aria-expanded="false">
-								<li><a href="tables-editable.html">Stocks</a></li>
+								<li><a href="stocks.html">Stocks</a></li>
 								<li><a href="ecommerce-orders.html">Orders</a></li>
 							</ul>
 						</li>
