--- a/adminhub.html
+++ b/adminhub.html
@@ -81,7 +81,7 @@
 					<ul class="metismenu list-unstyled" id="side-menu">
 						<li class="menu-title">Menu</li>
 						<li>
-							<a href="index.html"> <i class="iconify " data-icon="uil-home-alt" data-inline="false"></i> <span class="badge rounded-pill bg-primary float-end"></span> <span>Dashboard</span> </a>
+							<a href="adminhub.html"> <i class="iconify " data-icon="uil-home-alt" data-inline="false"></i> <span class="badge rounded-pill bg-primary float-end"></span> <span>Dashboard</span> </a>
 						</li>
 						<li class="menu-title">Others</li>
 						<li>
