--- a/ecommerce-customers.html
+++ b/ecommerce-customers.html
@@ -198,12 +198,12 @@
 		<div class="vertical-menu">
 			<!-- LOGO -->
 			<div class="navbar-brand-box">
-				<a href="index.html" class="logo logo-dark"> <span class="logo-sm">
+				<a href="adminhub.html" class="logo logo-dark"> <span class="logo-sm">
                             <img src="assets/images/logo-sm.png" alt="" height="22">
                         </span> <span class="logo-lg">
                             <img src="assets/images/logo-dark.png" alt="" height="20">
                         </span> </a>
-				<a href="index.html" class="logo logo-light"> <span class="logo-sm">
+				<a href="adminhub.html" class="logo logo-light"> <span class="logo-sm">
                             <img src="assets/images/logo-sm.png" alt="" height="22">
                         </span> <span class="logo-lg">
                             <img src="assets/images/logo-light.png" alt="" height="20">
@@ -217,7 +217,7 @@
 					<ul class="metismenu list-unstyled" id="side-menu">
 						<li class="menu-title">Menu</li>
 						<li>
-							<a href="index.html"> <i class="iconify " data-icon="uil-home-alt" data-inline="false"></i> <span class="badge rounded-pill bg-primary float-end"></span> <span>Dashboard</span> </a>
+							<a href="adminhub.html"> <i class="iconify " data-icon="uil-home-alt" data-inline="false"></i> <span class="badge rounded-pill bg-primary float-end"></span> <span>Dashboard</span> </a>
 						</li>
 						<li class="menu-title">Others</li>
 						<li>
